# CMakeDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cmakedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cmake/: CMakeLists.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/depedency_code/: CMakeLists.txt
app/src/main/depedency_code/cpp/: Depedency.cpp  Depedency.h
app/src/main/java/com/example/capplication/: MainActivity.java
app/src/main/java/com/example/cmakedemo/: MainActivity.java
app/src/main/main_code/: CMakeLists.txt  c_version.h  version.sh
app/src/main/main_code/cpp/: native-lib.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
